Added generated client code, added clan detail page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,7 +39,14 @@
       "season": {
         "empty": "All seasons",
         "label": "Season"
+      },
+      "team": {
+        "empty": "Both Ratings",
+        "label": "Rating"
       }
+    },
+    "history": {
+      "title": "Clan Wars History"
     },
     "livefeed": {
       "title": "Clan Wars Livefeed"
