--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -317,8 +317,9 @@
       "title": "Web-Connect"
     },
     "desktop": {
-      "description": "This feature is mainly for people who don't own a second screen and don't want to tab out of the game. <br /> Visit <a href=\"https://app.wows-monitor.com\">app.wows-monitor.com</a> on your second device (phone, laptop, etc) and open the Web-Connect popup. <br /> After you scanned this QR-Code you will receive all match updates on your second device",
-      "title": "Web-Connect"
+      "description": "This feature is mainly for people who don't own a second screen and don't want to tab out of the game. <br /> Visit <a href=\"https://app.wows-monitor.com\">app.wows-monitor.com</a> on your second device (phone, laptop, etc) and open the Web-Connect popup <strong>or</strong> copy the url and open it on your second device. <br /> After you scanned this QR-Code you will receive all match updates on your second device.",
+      "title": "Web-Connect",
+      "copy": "Copy"
     },
     "issues": {
       "permission": "Camera permission is required"
