Fix sanitize bug, add back navigation to clanwars, fixed link copy for qr code

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
     "markAllAsSeen": "Mark all as seen"
   },
   "clanwars": {
+    "back": "go back",
     "clansearch": {
       "placeholder": "Search for clans"
     },
