Implemented WOWS Karma player links through context menu
Only available to EU players currently, as we haven't deployed it for other Regions yet.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -159,6 +159,10 @@
       "wowsNumbers": "Clan on WOWS Numbers",
       "wowsKarma": "Clan on WOWS Karma"
     },
+    "playerPopup": {
+      "wowsNumbers": "Stats on WOWS Numbers",
+      "wowsKarma": "Info on WOWS Karma"
+    },
     "testship": "Ship is in live testing"
   },
   "pathPicker": {
