Implement Mixed Karma metric (with separated tooltip metrics)
There it is, the final piece of the puzzle.

Karma metric is now mixed (sum of both Game + WOWS Karma metrics), colour-coded, and with a nice tooltip to get individual metrics.

The rest is all yours ;)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -141,6 +141,10 @@
     "empty": "waiting for a match",
     "forcePVP": "Show random stats",
     "hidden": "Player has a hidden profile",
+    "karma": {
+      "game": "Game Karma : ",
+      "wowsKarma": "wows-karma.com : "
+    },
     "map": "Map",
     "matchGroup": {
       "CLAN": "Clan War",
