--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -165,7 +165,7 @@
 	},
 	"pathPicker": {
 		"additionalInfo": "Information about selected folder",
-		"description": "Select the main installation folder of World of Warships. <br />    If you have the WGC installation the path should look similar to this:<br />    <strong>C:\\Games\\World of Warships</strong> <br />    If you have the Steam installation the path should look similar to this:<br />    <strong>C:\\Programs\\Steam\\common<i>id</i>World of Warships</strong>",
+		"description": "Select the main installation folder of World of Warships.<br />If you have the WGC installation the path should look similar to this:<br />    <strong>C:\\Games\\World of Warships</strong><br />If you have the Steam installation the path should look similar to this:<br />    <strong>C:\\Programs\\Steam\\common\\World of Warships</strong>",
 		"dialogHeader": "Select your game folder",
 		"multiClientSelect": "Select active client",
 		"pickFolder": "Select your game folder"
