fix monitor styles, add screenshot anonym and fix screenshot rect

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -152,6 +152,7 @@
 		"labels": {
 			"accBattles": "Account Battles",
 			"accWinrate": "Account Winrate",
+			"anonymName": "Player {{index}}",
 			"battles": "Battles",
 			"damage": "Avg Damage",
 			"frags": "Avg Frags",
