--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -112,6 +112,10 @@
 			"login": "Login"
 		}
 	},
+	"labels": {
+		"liveMatches": "Matches",
+		"liveUsers": "Users"
+	},
 	"meta": {
 		"about": {
 			"title": "About"
