Update current stats without storing in db

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -195,6 +195,8 @@
 		"pr": {
 			"poweredBy": "Personal Rating from wows-numbers.com"
 		},
+		"refreshStats": "Update Stats",
+		"refreshedMatch": "Updated Stats",
 		"season": "Season",
 		"testship": "Ship is in live testing"
 	},
