--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,7 +122,7 @@
 		"from": "From",
 		"maps": "Maps",
 		"matchGroups": "Gamemodes",
-		"notEligable": "To view matches older than 3 days please subscribe to my Patreon.",
+		"notEligable": "To view matches older than 3 days please subscribe to my Patreon (Tier 1, Erie).",
 		"notEligableExport": "To export matches please subscribe to my Patreon (Tier 2, Phoenix).",
 		"region": "Region",
 		"reset": "Reset filter",
